--- a/src/containers/pages/Dashboard/Dashboard.scss
+++ b/src/containers/pages/Dashboard/Dashboard.scss
@@ -52,6 +52,7 @@
         box-shadow: 4px 3px 9px rgba(0, 0, 0, 0.1);
         margin-bottom: 16px;
         transition: all ease 0.35;
+        position: relative;
         &:hover {
             cursor: pointer;
             background: rgba(0, 0, 0, 0.1);
@@ -70,6 +71,22 @@
         .content {
             margin-top: 24px;
             font-size: 14px;
+        }
+        .delete-btn {
+            width: 30px;
+            height: 30px;
+            background: red;
+            border-radius: 30px;
+            display: flex;
+            justify-content: center;
+            font-weight: bold;
+            color: white;
+            position: absolute;
+            top: -15px;
+            right: -15px;
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 }
